# podcast-desktop-lyrics

./: .gitignore  LICENSE  README.md  pyproject.toml
packaging/: entry.py  icon.icns  make_icon.py  setup_app.py
podcast_desktop_lyrics/: __init__.py  __main__.py  app.py
scripts/: ax_probe.py  build_app.sh  build_dmg.sh  install.sh  uninstall.sh
